--- a/notes/todo/todo.txt
+++ b/notes/todo/todo.txt
@@ -7,7 +7,7 @@
 - [x] Definir a resolução do jogo
 - [x] Criar objeto de chão
 - [x] Fazer o player "andar"
-- [ ] Musica sfx do jogo
+- [x] Musica sfx do jogo
 - [ ] Pontuação do jogo
 - [ ] Spawner somente para o CLT
 - [ ] Mostrar historia no inicio do jogo
