--- a/notes/todo/todo.txt
+++ b/notes/todo/todo.txt
@@ -9,11 +9,13 @@
 - [x] Fazer o player "andar"
 - [x] Musica sfx do jogo
 - [x] Pontuação do jogo
-- [ ] Spawner somente para o CLT
+- [x] Spawner somente para o CLT
 - [ ] Mostrar historia no inicio do jogo
+- [ ] Remover coletaveis quando sair da tela
+- [ ] Remover CLT quando sair da tela
 
 ### Ideia do jogo
-  
+
 - O player anda pela parede, o chão é nos lados da tela.
 - Vai ser preciso criar um objeto de colisão pro player andar.
 - Ele pode pular de um lado para o outro apertando uma tecla.
