--- a/notes/todo/todo.txt
+++ b/notes/todo/todo.txt
@@ -10,6 +10,7 @@
 - [x] Musica sfx do jogo
 - [x] Pontuação do jogo
 - [x] Spawner somente para o CLT
+- [x] Cria dificuldade com a velocidade do game
 - [ ] Mostrar historia no inicio do jogo
 - [ ] Remover coletaveis quando sair da tela
 - [ ] Remover CLT quando sair da tela
